src/styles/components/_single-word.scss
@use "@styles/variables" as vars;
@use "@styles/mixins" as mx;
@use "@sass-butler/mixins" as butler-mx;
@use "@sass-butler/functions" as butler-fn;

.c-single-word {
  --size-quote-icon: 32px;

  background-color: var(--color-background, color-mix(in srgb, var(--orange-100) 30%, white));
  border: 1px dashed var(--grey-100);
  padding: vars.$spacer * 1.5;
  display: grid;
  gap: 2.25rem;
  grid-template-areas:
    "header"
    "main"
    "footer";
  box-shadow:
    0 0.5px 0.6px rgb(0 0 0 / 8%),
    0 4px 5px rgb(0 0 0 / 16%);

  @include butler-mx.dark-mode-class {
    --color-background: var(--new-blue-400);
  }
  @include mx.breakpoint("md") {
    grid-template-areas:
      "header header"
      "main main"
      "learn-more learn-more"
      "footer footer";
  }

  &:has(.c-single-word__gallery-wrap) {
    grid-template-areas:
      "header"
      "main"
      "gallery"
      "learn-more"
      "footer";

    @include mx.breakpoint("md") {
      grid-template-areas:
        "header header"
        "main gallery"
        "learn-more learn-more"
        "footer footer";
      grid-template-columns: 1fr 1fr;
    }
  }

  * {
    word-break: break-word;
  }

  &__header {
    grid-area: header;
    display: flex;
    flex-wrap: wrap;

    @include mx.breakpoint("sm") {
      justify-content: space-between;
    }
    @include mx.breakpoint("sm", "max") {
      gap: 1rem 0;
    }

    .c-options-dropdown {
      @include mx.breakpoint("sm", "max") {
        order: 1;
        flex: 1 0 100%;
        display: flex;
        justify-content: flex-end;
      }
    }

    .c-badge {
      --color-background: var(--accent);
    }

    .c-tooltip {
      align-self: flex-start;

      @include mx.breakpoint("sm", "max") {
        order: 3;
      }
    }

    .c-audio-list {
      align-self: center;
      margin-left: 10px;
    }
  }

  &__main {
    display: flex;
    flex-direction: column;
    gap: 2.25rem;
    grid-area: main;
  }

  .c-options-dropdown {
    margin-left: auto;
  }

  &__crown {
    display: flex;
    position: absolute;
    bottom: calc(100% - 10px);
    color: vars.$gold;
  }

  &__word {
    margin: 0;

    @include mx.breakpoint("sm", "max") {
      order: 2;
    }
    font: {
      family: vars.$berlin;
      size: butler-fn.fluid(32, 64, 320, 1260);
      weight: 700;
    }
    text: {
      decoration: underline;
      decoration-style: dashed;
      decoration-thickness: from-font;
      underline-position: from-font;
    }
  }

  &__word-article {
    font-weight: 400;
  }

  h2 {
    margin: var(--spacing-outer, 0 0 vars.$spacer * 0.25 0);
    font-size: 2rem;
  }

  h3 {
    font-size: 1.5rem;
  }

  h4 {
    font-size: 1.25rem;
  }

  h3,
  h4,
  h5,
  h6 {
    font-family: vars.$berlin;
    font-weight: 700;
    margin-block: 1.5em 1em;
  }

  :where(p, a, li) {
    font-size: 1.15rem;
  }

  :where(li) {
    line-height: 1.5;
  }

  &__syllables {
    .is-divider {
      font-weight: 700;
    }
  }

  &__word-type-wrapper {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 1rem;

    .c-single-word__sub-headline {
      --spacing-outer: 0;
    }
  }

  &__word-type {
    font-size: 1.5rem;
    margin: 0;
  }

  &__consonants-vowels {
    .is-consonant {
      color: var(--orange-500);
    }

    .is-vowel {
      color: #cfc536;
    }
  }

  &__translation {
    display: flex;
    flex-direction: column;
    row-gap: vars.$spacer * 1;
  }

  &__quote-icon {
    width: var(--size-quote-icon);
    height: var(--size-quote-icon);
    fill: var(--grey-200);
    flex: 0 0 auto;

    @include mx.breakpoint("md") {
      --size-quote-icon: 48px;
    }
  }

  &__examples {
    padding-left: vars.$spacer;
    display: flex;
    flex-direction: column;
    row-gap: vars.$spacer;

    @include mx.breakpoint("md") {
      --size-font: 1.8rem;
    }

    &-item {
      font-style: italic;
    }
  }

  &__examples,
  &__example {
    font-size: var(--size-font, 1.7rem);
    flex-basis: 100%;
    margin: calc(var(--size-quote-icon) + #{vars.$spacer * 0.5}) 0 0 0;
    word-break: break-word;

    &-explanation {
      font-size: 1rem;
      margin-top: vars.$spacer * 0.5;
    }
  }

  &__example {
    font-style: italic;

    @include mx.breakpoint("md") {
      --size-font: 2.2rem;
    }

    &-wrapper {
      --padding-y: #{vars.$spacer};
      --padding-x: 0;

      display: flex;
      padding: var(--padding-y) var(--padding-x);
      gap: var(--gap, #{vars.$spacer * 0.5});

      @include mx.breakpoint("sm") {
        --gap: #{vars.$spacer};
        --padding-y: #{vars.$spacer * 1.5};
        --padding-x: 5%;
      }
      @include mx.breakpoint("md") {
        --padding-y: #{vars.$spacer * 2.5};
        --padding-x: 7%;
      }
    }
  }

  &__gallery-wrap {
    grid-area: gallery;
  }

  .c-image-gallery {
    display: grid;
    gap: vars.$spacer * 1.5;

    @include mx.breakpoint("xxs") {
      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    }

    .c-image-gallery__item {
      margin: 0;
      padding: var(--spacing-inner, 10px);
      background: #fff;
      width: fit-content;
      box-shadow: 0 3px 3px
        color-mix(in srgb, var(--color-box-shadow, var(--orange-900)) 16%, transparent);
      height: fit-content;

      @include butler-mx.dark-mode-class {
        --color-border: var(--new-blue-200);
      }
    }

    .c-image-gallery__link {
      cursor: zoom-in;
    }

    .c-image-gallery__caption {
      color: var(--blue-400);
      margin-top: 0.5rem;
      font-size: 0.8rem;
    }

    // picture > source {
    //   display: none;
    // }

    // @see example 1: https://codepen.io/highplainsdrifter/pen/DZZWRE
    // @see example 2:https://alvaromontoro.com/blog/68020/old-photo-effect-with-css
    // picture {
    //   display: block;
    //   position: relative;
    //   filter: grayscale(1) blur(1px) contrast(1.2) sepia(1) blur(0.25px);
    //   mask: radial-gradient(#000, #000a);

    //   &::before {
    //     content: "";
    //     position: absolute;
    //     width: 100%;
    //     height: 100%;
    //     mask: radial-gradient(farthest-side, #0000 30%, #000);
    //     backdrop-filter: blur(5px) sepia(90%);
    //   }

    //   &::after {
    //     content: "";
    //     position: absolute;
    //     left: 0;
    //     width: 100%;
    //     height: 100%;
    //     opacity: 0.6;
    //     background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100'><filter id='noise' x='0%' y='0%' width='100%' height='100%'><feTurbulence baseFrequency='0.5' /></filter><rect x='0' y='0' width='100%' height='100%' filter='url(%23noise)' /></svg>"),
    //       #f003;
    //     filter: grayscale(100%) contrast(150%);
    //     mix-blend-mode: darken;
    //   }
    // }
  }

  &__learn-more {
    &-link {
      grid-area: learn-more;
      display: flex;
      gap: vars.$spacer * 0.2;
      font-size: var(--size-font, 0.9rem);
      margin-top: 2.5rem;

      @include butler-mx.hover {
        --decoration-text: underline dashed;
      }
      @include mx.breakpoint("xxs") {
        --size-font: 1rem;
      }
      @include mx.breakpoint("md") {
        justify-self: flex-end;
      }

      &-icon {
        display: inline-flex;
      }
    }
  }

  &__related-words-list {
    display: flex;
    flex-wrap: wrap;
    gap: vars.$spacer * 0.5 vars.$spacer * 2;
  }

  &__footer {
    grid-area: footer;
    display: flex;
    flex-direction: var(--direction-flex, column);
    gap: var(--spacing, #{vars.$spacer * 0.5});
    border-top: 1px dashed var(--new-blue-200);
    padding-top: vars.$spacer * 1.5;

    @include mx.breakpoint("xs") {
      --spacing: #{vars.$spacer * 2};
      --direction-flex: row;

      justify-content: flex-end;
    }
  }

  &__created,
  &__modified {
    margin: 0;
    font-size: 0.8rem;
    color: color-mix(in srgb, var(--blue) 60%, white);
  }
}

